# ctci

./: README.md  pyproject.toml
ctci/linked_list/: __init__.py  delete_middle_node.py  intersection.py  kth_to_last.py  loop_detection.py  palindrome.py  partition.py  remove_dups.py  sum_lists.py
ctci/stacks_and_queues/: __init__.py  stack_min.py  stack_of_plates.py
ctci/strings_and_arrays/: __init__.py  check_permutations.py  is_unique.py  one_away.py  palindrome_permutation.py  string_compression.py  string_rotation.py  urlify.py  zero_matrix.py
ctci/utils/: __init__.py  linked_lists.py  queue.py  stack.py
tests/linked_lists/: test_delete_middle_node.py  test_intersection.py  test_kth_to_last.py  test_loop_detection.py  test_palindrome.py  test_partition.py  test_remove_dups.py  test_sum_lists.py
tests/stacks_and_queues/: test_min_stack.py  test_stack_of_plates.py
tests/strings_and_arrays/: test_check_permutations.py  test_is_unique.py  test_one_away.py  test_palindrome_permutation.py  test_string_compression.py  test_string_rotation.py  test_urlify.py  test_zero_matrix.py
