[tool.poetry]
name = "ctci"
version = "0.1.0"
description = ""
authors = ["Sam Kasbawala <samarth.kasbawala@uconn.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
